--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="">Lasagna</a></li>
-        <li><a href="">Sausage Manicotti Bake</a></li>
-        <li><a href="">Air Fryer Buffalo Wings</a></li>
-        <li><a href="">Harissa Honey Chicken</a></li>
-        <li><a href="">Cookies and Cream Brownies</a></li>
+        <li><a href="./recipes/worlds_best_lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/sausage_manicotti_bake.html">Sausage Manicotti Bake</a></li>
+        <li><a href="./recipes/air_fryer_buffalo_wings.html">Air Fryer Buffalo Wings</a></li>
+        <li><a href="./recipes/harissa_honey_chicken.html">Harissa Honey Chicken</a></li>
+        <li><a href="./recipes/cookies_and_cream_brownies.html">Cookies and Cream Brownies</a></li>
     </ul>
 </body>
 </html>
