--- a/recipes/worlds_best_lasagna.html
+++ b/recipes/worlds_best_lasagna.html
@@ -17,12 +17,12 @@
     <h2>Recipe</h2> 
     <p>Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:</p>
 
-    <h3>Lasagna Ingredients</h3>
+    <h3>Ingredients</h3>
     <p>The Allrecipes community adores this lasagna recipe because it's incredibly customizable, so you can easily alter the ingredient list to suit your needs. If you want to stay true to the original recipe, though, these are the ingredients you'll need to add to your grocery list:</p>
     <ul>
         <li><strong>Meat:</strong>This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
         <li><strong>Onion and garlic:</strong>An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
-        <li><strong>Tomato products:</strong>You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
+        <li><strong>Tomato products:</strong>You'll need a can of crushed tomatoes, two cans of tomato sauce and two cans of tomato paste.</li>
         <li><strong>Sugar:</strong>Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li>
         <li><strong>Spices and seasonings:</strong>This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
         <li><strong>Lasagna noodles:</strong>Use store-bought or homemade lasagna noodles.</li>
@@ -43,12 +43,12 @@
 
     <h3>How to Layer Lasagna</h3>
     <ol>
-        <li>Meat sauce</li>
-        <li>Noodles</li>
-        <li>Ricotta mixture</li>
-        <li>Mozzarella slices</li>
-        <li>Meat sauce</li>
-        <li>Parmesan cheese</li>
+        <li>Meat sauce.</li>
+        <li>Noodles.</li>
+        <li>Ricotta mixture.</li>
+        <li>Mozzarella slices.</li>
+        <li>Meat sauce.</li>
+        <li>Parmesan cheese.</li>
         <li>Repeat the layers, then top with the remaining Parmesan.</li>
     </ol>
 
