--- a/recipes/cookies_and_cream_brownies.html
+++ b/recipes/cookies_and_cream_brownies.html
@@ -38,7 +38,7 @@
         <li><strong>Step 3: </strong>Whisk butter, eggs, and vanilla together in a separate bowl. Add butter mixture to the flour mixture and mix until well combined.</li>
         <li><strong>Step 4: </strong>Pour 1/2 of the batter into the prepared baking pan and smooth out with a spatula. Add 16 Oreo cookies in an even layer (4 rows of 4 cookies), then spread the remaining 1/2 of the batter on top.</li>
         <li><strong>Step 5: </strong>Bake in the preheated oven until edges are brown and center is set, 30 to 35 minutes.</li>
-        <li><strong>Step 6: </strong>Remove pan from the oven and set on a wire rack. Let brownies cool completely, at least 30 minutes.<li>
+        <li><strong>Step 6: </strong>Remove pan from the oven and set on a wire rack. Let brownies cool completely, at least 30 minutes.</li>
         <li><strong>Step 7: </strong>Crush 12 of the remaining Oreo cookies. Place whipped topping in a bowl and fold in crushed cookies; spread mixture over the top of the brownies. Crush the remaining 4 cookies; sprinkle over the top of the whipped cream mixture.</li>
         <li><strong>Step 8: </strong>Keep refrigerated until you are ready to slice and serve.</li>
     </ol>
